--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -43,7 +43,11 @@
       <input type="number" name="seats" min="0" required /><br /><br />
 
       <label>Brand:</label>
-      <input type="number" name="brand" required /><br /><br />
+      <select name="brand" required>
+        {% for brand in brands %}
+        <option value="{{ brand }}">{{ brand }}</option>
+        {% endfor %}
+      </select>
 
       <label>Fuel Type:</label>
       <select name="fuel">
@@ -69,9 +73,5 @@
 
       <button type="submit">Predict</button>
     </form>
-
-    {% if prediction_text %}
-    <h2>{{ prediction_text }}</h2>
-    {% endif %}
   </body>
 </html>
